--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,12 +4,20 @@
       {
         "src": "server.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "client/build/**/*",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
+        "src": "/api/(.*)",
         "dest": "/server.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/client/build/$1"
       }
     ]
   }
