--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,22 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "backend/server.js",
+        "src": "server.js",
         "use": "@vercel/node"
-      },
-      {
-        "src": "public/**",
-        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "backend/server.js"
-      },
-      {
         "src": "/(.*)",
-        "dest": "public/$1"
+        "dest": "/server.js"
       }
     ]
   }
